Improve the misc cell view format in AdminWeb2

--- a/api-runtime/rest-runtime/admin-web/html/security-group.html
+++ b/api-runtime/rest-runtime/admin-web/html/security-group.html
@@ -122,6 +122,7 @@
     .add-button {
         font-size: 14px;
         font-weight: bold;
+        margin-left: 1px;
         margin-right: 5px;
         margin-bottom: 10px;
     }
@@ -1190,8 +1191,8 @@
 
                     const button20 = document.createElement('button');
                     button20.className = 'mock-add-button add-button';
-                    button20.textContent = '+20';
-                    button20.onclick = () => createMultipleSecurityGroups(20);
+                    button20.textContent = '+50';
+                    button20.onclick = () => createMultipleSecurityGroups(50);
 
                     mockButtonsContainer.appendChild(button10);
                     mockButtonsContainer.appendChild(button20);
