Align the Add button position to center in VPC/Subnet page and SecurityGroup page

--- a/api-runtime/rest-runtime/admin-web/html/security-group.html
+++ b/api-runtime/rest-runtime/admin-web/html/security-group.html
@@ -1527,7 +1527,7 @@
                         <button type="button" onclick="addSGTagField()">+</button>
                     </div>
                 </div>
-                <div style="display: flex; align-items: center; margin-top: 20px;">
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
                     <button type="submit">Add SecurityGroup</button>
                     <button type="button" onclick="hideOverlay()" style="margin-left: 10px;">Cancel</button>
                 </div>
@@ -1577,7 +1577,7 @@
                     <label for="addCidr">CIDR:</label>
                     <input type="text" id="addCidr" name="addCidr" value="0.0.0.0/0" required style="width: 65%;">
                 </div>
-                <div class="form-group" style="margin-top: 20px;">
+                <div class="form-group" style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
                     <button type="submit">Add Rule</button>
                     <button type="button" onclick="hideRuleOverlay()">Cancel</button>
                 </div>
