--- a/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
+++ b/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
@@ -1496,7 +1496,7 @@
                         <button type="button" onclick="addSubnetTagField()">+</button>
                     </div>
                 </div>
-                <div style="display: flex; align-items: center; margin-top: 20px;">
+                <div style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
                     <label for="vpcCount" style="margin-right: 5px;margin-left: 40px;">#:</label>
                     <input type="number" id="vpcCount" name="vpcCount" class="vpc-count" value="1" min="1" max="10" style="width: 50px; margin-right: 10px;">
                     <button type="submit">Add VPC/Subnet</button>
@@ -1535,7 +1535,7 @@
                     </div>
                     <button type="button" onclick="addAddSubnetTagField()">+</button>
                 </div>
-                <div class="form-group" style="margin-top: 20px;">
+                <div class="form-group" style="display: flex; justify-content: center; align-items: center; margin-top: 20px;">
                     <button type="submit">Add Subnet</button>
                     <button type="button" onclick="hideSubnetOverlay()">Cancel</button>
                 </div>
