Enhnace the error message in detail in VPC/Subnet Management Page

--- a/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
+++ b/api-runtime/rest-runtime/admin-web/html/vpc-subnet.html
@@ -888,7 +888,7 @@
             }
         })
         .catch(error => {
-            alert("Error deleting tag: " + error.message);
+            showError("Error deleting tag: " + error.message, "Resource Name: " + resourceName);
         });
     }
 
