Update tags + button style to light

--- a/api-runtime/rest-runtime/admin-web/html/keypair.html
+++ b/api-runtime/rest-runtime/admin-web/html/keypair.html
@@ -204,6 +204,13 @@
     .add-btn-container {
         margin-top: 5px;
     }
+    .add-btn {
+        background-color: transparent;
+        border: none;
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer;
+    }
 
     .add-tag-overlay-content {
         background-color: white;
