--- a/api-runtime/rest-runtime/admin-web/html/security-group.html
+++ b/api-runtime/rest-runtime/admin-web/html/security-group.html
@@ -234,6 +234,30 @@
     .tag-container:hover {
         background-color: #c1e1c1;
     }
+
+    .add-btn-container {
+        margin-top: 5px;
+    }
+    .add-btn {
+        background-color: transparent;
+        border: none;
+        color: blue;
+        text-decoration: underline;
+        cursor: pointer;
+    }
+
+    .add-tag-overlay-content {
+        background-color: white;
+        padding: 20px;
+        border-radius: 5px;
+        text-align: left;
+        font-family: Arial, sans-serif;
+        font-size: 14px;
+        max-width: 300px;
+        word-wrap: break-word;
+        position: relative;
+    }
+
     .sg-name {
         width: 10%;
     }
